# morphs-canvas

./: GEMINI.md  README.md
backend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/morph_canvas_backend/: __main__.py
backend/morph_canvas_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/background-count/: route.ts
frontend/src/app/api/test-bg-removal/: route.ts
frontend/src/app/api/upload/: route.ts
frontend/src/app/bg-fill/: page.tsx
frontend/src/components/: Header.tsx
