[project]
name = "morph-canvas-backend"
version = "0.1.0"
description = "FastAPI backend for Morph Canvas: background removal (rembg) and tinting"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pillow>=10.0.0",
  "rembg>=2.0.56",
  "python-multipart>=0.0.9",
]

[tool.uv]
package = true

[project.scripts]
start = "morph_canvas_backend.__main__:main"


